Remove transition all as causing issue with validation icon shifting.

--- a/src/styles/mixins/_focus.scss
+++ b/src/styles/mixins/_focus.scss
@@ -2,6 +2,7 @@ $focus-y-offset-underline: -3px;
 $focus-spread-default: 3px;
 
 @mixin focus-box-shadow($value) {
+  transition: box-shadow 250ms ease-in-out;
   &:focus,
   &:hover,
   &:active,
@@ -45,12 +46,10 @@ $focus-spread-default: 3px;
 
   &.vs-focus-style-underline {
     @include focus-box-shadow(inset 0 $focus-y-offset-underline 0 0 $gray-tint-6);
-    transition: all 250ms ease-in-out;
   }
 
   &.vs-focus-style-outset {
     @include focus-box-shadow(0 0 0 $focus-spread-default $gray-tint-6);
-    transition: all 250ms ease-in-out;
   }
 
   &.vs-focus-colour-pink {
